Fixes nav bar width issue on mobile devices

--- a/WebContent/References/Styles.css
+++ b/WebContent/References/Styles.css
@@ -32,8 +32,8 @@ and open the template in the editor.
     }
     
     .wrapper .header .headerNav {
-    	margin: 0 25%;
-    	width: 50%;
+    	margin: 0 20%;
+    	width: 60%;
     }
 
     .wrapper .main {
